🐛 Fixing optical bug with overflow of the station names on Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,8 @@ html,body,.container{
   overflow: hidden;
 }
 .overflowHorizontalScroll{
-  overflow-x: scroll;
+  overflow: hidden;
+  /* overflow-x: scroll; */
 }
 
 .tripIcon{
